--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <meta
       name="description"
-      content="Мы постараемся простым языком рассказать о криптовалюте, ответить на самые популярные вопросы о ней и дадим Вам возможность узнать, в каких пропорциях относятся цифровые (и не только) деньги по отношению друг к другу!"
+      content="Мы постараемся простым языком рассказать о криптовалюте, ответить на самые популярные вопросы о ней и дать Вам возможность узнать, в каких пропорциях относятся цифровые и фиатные деньги по отношению друг к другу!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
